Further z-index corrections to header items.

--- a/assets/css/3-sections/header.sass
+++ b/assets/css/3-sections/header.sass
@@ -2,7 +2,7 @@
   header
     width: 136px
     padding: 30px 0
-    z-index: 50
+    z-index: 5
 
     .header-position
       position: fixed
@@ -13,6 +13,7 @@
       display: flex
       flex-direction: column
       justify-content: space-between
+      z-index: 6
 
 
     .logo
